# streamlit-inspect

./: .gitignore  README.md  pyproject.toml  setup.py  streamlit_view.py
example/: kornia_view.py
examples/custom_type/: kornia_view.py
streamlit_inspect/: classes.py  functions.py  utils.py
tests/: streamlit_view.py  test_class.py
